# IP-over-audio

./: .gitignore  CMakeLists.txt  Makefile.cmake  README.md  morse_decoder.c  morse_decoder.h  record_mono_audio.sh  test_structure
UDP_network/: Makefile  README  fancyclient.c  fancyclient.h  server.c  server.h
archive/: morse_base.c
core-functionality/: CMakeLists.txt  Makefile  ip-over-morse.cpp  main.c  morse_core.c  morse_core.h  morse_decoder.c  ms  text_to_wav.c  text_to_wav.h  wav_to_morse.c  wav_to_morse.h  wavfile.h
core-functionality/morse_code/: main.c
core-functionality/networking/: tcp_communication.c  udp_client.c  udp_server.c
core_functionality/: main.c
decoder_python/: README  main.py
examples&tests/: test_wav_to_morse.c
morse_code/: Makefile  morse_base.c  morse_base.h  morse_decoder.c  morse_decoder.h  morse_encoder.c  morse_encoder.h  real_morse.c  test_morse.c
morse_encoder/: text_to_wav.h
networking/: README.md  networking.h  tcp_client.c  tcp_communication.c  tcp_server.c  udp_client.c  udp_server.c
networking/client/: client.c
networking/server/: server.c
src/: ip-over-morse.c  ip-over-morse.cpp  ip-over-morse.h
src/morse_code/: example_file.txt  main.c  morse_core.c  morse_core.h  text_to_wav.c  wav_to_morse.c  wav_to_morse.h
src/networking/: networking.h  tcp_client.c  tcp_communication.c  tcp_server.c  udp_client.c  udp_server.c
text_to_morse_wav/: Makefile  example_file.txt  main.c  morse_core.c  morse_core.h  text_to_morse.c  text_to_morse.h  wavfile.c  wavfile.h
